updated with jwt authentication