@@ -1,85 +1,45 @@
 package com.example.dailyfix.config;
 
-import com.example.dailyfix.service.CustomOAuth2UserService;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.web.server.servlet.CookieSameSiteSupplier;
+import com.example.dailyfix.jwt.JwtFilter;
+import com.example.dailyfix.oauth2.OAuth2SuccessHandler;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpStatus;
-import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.oauth2.client.JdbcOAuth2AuthorizedClientService;
-import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
-import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.HttpStatusEntryPoint;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private final CustomOAuth2UserService customOAuth2UserService;
-
-    // Uses the Render environment variable APP_FRONTEND_URL
-    @Value("${APP_FRONTEND_URL:http://localhost:3000}")
-    private String frontendUrl;
-
-    public SecurityConfig(CustomOAuth2UserService customOAuth2UserService) {
-        this.customOAuth2UserService = customOAuth2UserService;
-    }
-
-    /**
-     * Forces the JSESSIONID cookie to include 'SameSite=None' and 'Secure'.
-     * This is mandatory for cross-domain authentication (Vercel to Render).
-     */
-    @Bean
-    public CookieSameSiteSupplier applicationCookieSameSiteSupplier() {
-        return CookieSameSiteSupplier.ofNone().whenHasName("JSESSIONID");
-    }
-
-    @Bean
-    public OAuth2AuthorizedClientService authorizedClientService(
-            JdbcTemplate jdbcTemplate,
-            ClientRegistrationRepository clientRegistrationRepository) {
-        return new JdbcOAuth2AuthorizedClientService(jdbcTemplate, clientRegistrationRepository);
-    }
+    @Autowired private JwtFilter jwtFilter;
+    @Autowired private OAuth2SuccessHandler successHandler;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
+                .sessionManagement(sm ->
+                        sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/", "/login/**", "/oauth2/**", "/api/user/me").permitAll()
+                        .requestMatchers(
+                                "/error",
+                                "/login/**",
+                                "/oauth2/**",
+                                "/api/public/**"
+                        ).permitAll()
                         .anyRequest().authenticated()
                 )
-                .exceptionHandling(e -> e
-                        .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
-                )
-                .oauth2Login(oauth2 -> oauth2
-                        .userInfoEndpoint(userInfo -> userInfo
-                                .oidcUserService(customOAuth2UserService)
-                        )
-                        // Redirects to Vercel dashboard upon successful login
-                        .defaultSuccessUrl(frontendUrl + "/dashboard", true)
-                )
-                .logout(logout -> logout
-                        .logoutSuccessUrl(frontendUrl + "/")
-                        .deleteCookies("JSESSIONID")
-                        .invalidateHttpSession(true)
-                )
-                .sessionManagement(session -> session
-                        // Ensures the session is properly linked to the user before redirecting
-                        .sessionFixation().migrateSession()
-                );
+                .oauth2Login(oauth -> oauth.successHandler(successHandler))
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -87,17 +47,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-
-        // Allows your specific Vercel frontend to communicate with the Render backend
-        config.setAllowedOrigins(Arrays.asList(frontendUrl, "https://daily-fix-six.vercel.app"));
-
-        // Allows the browser to send JSESSIONID cookies back and forth
-        config.setAllowCredentials(true);
-
+        config.setAllowedOrigins(List.of("https://daily-fix-six.vercel.app"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Cache-Control", "X-Requested-With"));
-        config.setExposedHeaders(List.of("Set-Cookie"));
-
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(false); // JWT = no cookies
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
